fix(client): prevent content layout shift when selecting a template (#2482)
Issue: when hovering templates in the new project form, the content gets shifted due to the added border.

--- a/client/src/components/templateSelector/TemplateSelector.css
+++ b/client/src/components/templateSelector/TemplateSelector.css
@@ -1,5 +1,5 @@
 .template-card:hover {
-    border: 1px solid;
+    box-shadow: 0 0 0 1px var(--bs-rk-green), var(--rk-box-shadow);
     border-color: var(--bs-rk-green);
 }
 
@@ -12,18 +12,19 @@
 }
 
 .template--active:hover {
-    border-color: #009568;
+    border-color: var(--bs-rk-green);
 }
 
 .template--active:hover .card-footer {
-    border-color: #009568;
-    color: #009568;
+    border-color: var(--bs-rk-green);
+    color: var(--bs-rk-green);
     background-color: white;
 }
 
 .template--active.selected {
-    border: 2.5px solid #009568;
-    color: #009568;
+    box-shadow: 0 0 0 2px var(--bs-rk-green), var(--rk-box-shadow);
+    border-color: var(--bs-rk-green);
+    color: var(--bs-rk-green);
 }
 
 .template-card img {
